--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title> This is the page title eyoo</title>
+		<style>
+			body {
+				background-color: salmon;
+			}
+		</style>
 	</head>
 	<body>
 		<h1> Orlando's Portfolio Site</h1>
